--- a/templates/taxstatement.html
+++ b/templates/taxstatement.html
@@ -7,75 +7,49 @@
 
 {% block page_content %}
 <hr>
-<div class="card">
-    <div class="card-header">
-        <div class="row">
-            <div class="col-11">
-                <h3 class="text-center">Income</h3>
-            </div>
-            <div class="col-1">
-{% if income %}
-                <button class="btn btn-primary" data-toggle="modal" data-target="#incomeModal">Edit</button>
-{% else %}
-                <button class="btn btn-primary" data-toggle="modal" data-target="#incomeModal">Add</button>
-{% endif %}
-            </div>
-        </div>
-    </div>
-{% if income %}
-    <ul class="list-group">
-        <li class="list-group-item"><text class="text-muted">Income person 1</text> € {{ income.income_1 }}</li>
-        <li class="list-group-item"><text class="text-muted">Income person 2</text> € {{ income.income_2 }}</li>
-    </ul>
-{% endif %}
-</div>
+
+{% for elt_name, elt_object, elt_form, elt_fields, _ in statement_elements %}
 
 <div class="card">
     <div class="card-header">
         <div class="row">
             <div class="col-11">
-                <h3 class="text-center">Charity</h3>
+                <h3 class="text-center">{{elt_name}}</h3>
             </div>
             <div class="col-1">
-{% if charity %}
-                <button class="btn btn-primary" data-toggle="modal" data-target="#charityModal">Edit</button>
+{% if elt_object %}
+                <button class="btn btn-primary" data-toggle="modal" data-target="#{{elt_name}}Modal">Edit</button>
 {% else %}
-                <button class="btn btn-primary" data-toggle="modal" data-target="#charityModal">Add</button>
+                <button class="btn btn-primary" data-toggle="modal" data-target="#{{elt_name}}Modal">Add</button>
 {% endif %}
             </div>
         </div>
     </div>
-{% if charity %}
+{% if elt_object %}
     <ul class="list-group">
-        <li class="list-group-item"><text class="text-muted">Charity towards people in distress (7UD)</text> € {{ charity.charity_7UD }}</li>
-        <li class="list-group-item"><text class="text-muted">Other charity (7UF)</text> € {{ charity.charity_7UF }}</li>
+        {% for field_text, field_name in elt_fields %}
+        <li class="list-group-item"><text class="text-muted">{{field_text}}</text> € {{ elt_object | attr(field_name) }}</li>
+        {% endfor %}
     </ul>
 {% endif %}
 </div>
+{% endfor %}
 
 {% import 'bootstrap/form.html' as wtf %}
 
 <!-- Modals -->
-<div class="modal" id="incomeModal" role="dialog" aria-hidden="true">
+{% for elt_name, elt_object, elt_form, elt_fields, upsert_route in statement_elements %}
+<div class="modal" id="{{elt_name}}Modal" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header">{% if income %}Edit{% else %}Add{% endif %} income</div>
+            <div class="modal-header">{% if elt_object %}Edit{% else %}Add{% endif %} {{elt_name}}</div>
             <div class="modal-body">
-                    {{ wtf.render_form(income_form, action=url_for('upsert_income', project_id=project.id, taxstatement_id=taxstatement.id)) }}
+                    {{ wtf.render_form(elt_form, action=url_for(upsert_route, project_id=project.id, taxstatement_id=taxstatement.id)) }}
             </div>
         </div>
     </div>
 </div>
-<div class="modal" id="charityModal" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">{% if charity %}Edit{% else %}Add{% endif %} charity</div>
-            <div class="modal-body">
-                    {{ wtf.render_form(charity_form, action=url_for('upsert_charity', project_id=project.id, taxstatement_id=taxstatement.id)) }}
-            </div>
-        </div>
-    </div>
-</div>
+{% endfor %}
 <hr>
 
 <div class="row">
