--- a/templates/taxstatement.html
+++ b/templates/taxstatement.html
@@ -18,9 +18,9 @@
             </div>
             <div class="col-1">
 {% if elt_object %}
-                <button class="btn btn-primary" data-toggle="modal" data-target="#{{elt_name}}Modal">Edit</button>
+                <button class="btn btn-primary" data-toggle="modal" data-target="#{{elt_name | replace(' ','') }}Modal">Edit</button>
 {% else %}
-                <button class="btn btn-primary" data-toggle="modal" data-target="#{{elt_name}}Modal">Add</button>
+                <button class="btn btn-primary" data-toggle="modal" data-target="#{{elt_name | replace(' ','') }}Modal">Add</button>
 {% endif %}
             </div>
         </div>
@@ -39,7 +39,7 @@
 
 <!-- Modals -->
 {% for elt_name, elt_object, elt_form, elt_fields, upsert_route in statement_elements %}
-<div class="modal" id="{{elt_name}}Modal" role="dialog" aria-hidden="true">
+<div class="modal" id="{{elt_name | replace(' ','') }}Modal" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">{% if elt_object %}Edit{% else %}Add{% endif %} {{elt_name}}</div>
