--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
     <h3 class="card-header text-center">{{ project.name }}</h3>
     <div class="card-body">
         <p class="card-text">Coucou</p>
-        <a href="{{ url_for('project', project_id=project.id) }}" class="btn btn-primary">Go</a>
+        <a href="{{ url_for('project_tax', project_id=project.id) }}" class="btn btn-primary">Go</a>
+        <a href="{{ url_for('project_stocks', project_id=project.id) }}" class="btn btn-primary">Go to stocks</a>
         <a href="{{ url_for('project_delete', project_id=project.id) }}" class="btn btn-danger">Delete</a>
     </div>
 </div>
