--- a/app/templates/project_tax.html
+++ b/app/templates/project_tax.html
@@ -2,7 +2,7 @@
 
 
 {% block page_header %}
-<a href="{{ url_for('index') }}"><i class="fas fa-home"></i></a> > Project {{project.name}}
+<a href="{{ url_for('main.index') }}"><i class="fas fa-home"></i></a> > Project {{project.name}}
 {% endblock %}
 
 {% block page_content %}
@@ -16,8 +16,8 @@
         <h3 class="card-header">{{ taxstatement.year }}</h3>
         <div class="card-body">
             <p class="card-text">Coucou</p>
-            <a href="{{ url_for('taxstatement',  project_id=project.id, taxstatement_id=taxstatement.id) }}" class="btn btn-primary">Go</a>
-            <a href="{{ url_for('taxstatement_delete', project_id=project.id, taxstatement_id=taxstatement.id) }}" class="btn btn-danger">Delete</a>
+            <a href="{{ url_for('.taxstatement',  project_id=project.id, taxstatement_id=taxstatement.id) }}" class="btn btn-primary">Go</a>
+            <a href="{{ url_for('.taxstatement_delete', project_id=project.id, taxstatement_id=taxstatement.id) }}" class="btn btn-danger">Delete</a>
         </div>
     </div>
     {% endfor %}
@@ -39,7 +39,7 @@
         <div class="modal-content">
             <div class="modal-header">Edit project</div>
             <div class="modal-body">
-                    {{ wtf.render_form(project_edit_from, action=url_for("project_update", project_id=project.id)) }}
+                    {{ wtf.render_form(project_edit_from, action=url_for("main.project_update", project_id=project.id)) }}
             </div>
         </div>
     </div>
