Fixed tax_inputs to match new easyfrenchtax enum

--- a/app/templates/taxstatement.html
+++ b/app/templates/taxstatement.html
@@ -54,7 +54,7 @@
 
 <div class="row">
     <div class="col">
-        <h5> Your taxes will be {{ tax_result['net_taxes'] +  tax_result['net_social_taxes']}}
+        <h5> Your taxes will be {{ total_taxes }}
             <a class="btn" data-toggle="collapse" href="#collapseTaxDetails" role="button" aria-expanded="false" aria-controls="collapseExample">
                 Details...
             </a>
