--- a/app/templates/project_stocks.html
+++ b/app/templates/project_stocks.html
@@ -19,7 +19,7 @@
 </div>
 <div class="btn-group mr-2" role="group" aria-label="Sell stocks">
     <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownSellingButton" data-toggle="dropdown">
             Declare a selling event
         </button>
         <div class="dropdown-menu">
@@ -30,10 +30,10 @@
 </div>
 <div class="btn-group mr-2" role="group" aria-label="Get tax statement">
     <div class="dropdown">
-        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
+        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownTaxButton" data-toggle="dropdown">
             Tax helper
         </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <div class="dropdown-menu" aria-labelledby="dropdownTaxButton">
         {% for y in sales_years %}
             <a class="dropdown-item" href="{{ url_for('.taxed_stock_helper', project_id=project.id, year=y) }}">{{y}}</a>
         {% endfor %}
@@ -64,17 +64,17 @@
 <h3 class="my-4">RSU Plans</h3>
 {% endif %}
 
-{% for symbol, rsu_plans in rsu_portfolio.plans.items() %}
+{% for symbol, rsu_plans in rsu_portfolio.get_plans().items() %}
 <h4 class="my-4">{{ symbol }}: {{ rsu_portfolio.stock_symbols[symbol] }}</h4>
 <ul class="list-group">
-    {% for rsuplan, tax_scheme, vestings in rsu_plans %}
-    <li class="list-group-item">{{ rsuplan.name }}  <text class="text-muted">tax scheme {{tax_scheme}}</text>
+    {% for plan in rsu_plans %}
+    <li class="list-group-item">{{ plan.name }}  <text class="text-muted">tax scheme {{tax_scheme}}</text>
                 <!-- data-rsuplan gets forwarded to the wtform in modal, by some JS -->
-                <a class="btn btn-success btn-sm" data-toggle="modal" data-target="#RsuVestingModal" data-rsuplan="{{rsuplan.id}}"><i class="fa fa-plus" style="color:white"></i> add vesting</a>
-                <a class="btn btn-danger btn-sm float-right" href="{{ url_for('.rm_rsu_plan', project_id=project.id, rsuplan_id=rsuplan.id) }}"><i class="fa fa-trash"></i></a>
+                <a class="btn btn-success btn-sm" data-toggle="modal" data-target="#RsuVestingModal" data-rsuplan="{{plan.plan_id}}"><i class="fa fa-plus" style="color:white"></i> add vesting</a>
+                <a class="btn btn-danger btn-sm float-right" href="{{ url_for('.rm_rsu_plan', project_id=project.id, rsuplan_id=plan.plan_id) }}"><i class="fa fa-trash"></i></a>
         <ul>
-            {% for vesting in vestings %}
-            <li>{{vesting.vesting_date}} : {{vesting.count}}</li>
+            {% for vesting in plan.vestings %}
+            <li>{{vesting.vesting_date}} : {{vesting.currently_available}}</li>
             {% endfor %}
         </ul>
     </li>
